--- a/src/collections/proof-of-existence/2.md
+++ b/src/collections/proof-of-existence/2.md
@@ -2,7 +2,7 @@
 title: "Unexpected Guest (2)"
 arc: 1
 chapter: 2
-tags: ["cynara", "graves", "zaire", "cyprian", "luka"]
+tags: ["cynara", "graves", "zaire", "cyprian", "luka", "moon path realm"]
 lastEdit: 2025-04-04
 pubDate: 2025-03-28
 ---
