--- a/src/collections/proof-of-existence/3.md
+++ b/src/collections/proof-of-existence/3.md
@@ -2,11 +2,11 @@
 title: "Unexpected Guest (3)"
 arc: 1
 chapter: 3
-tags: ["cynara", "luka"]
+tags: ["cynara", "luka", "moon path realm"]
 lastEdit: 2025-04-04
 pubDate: 2025-03-29
 ---
-It took less than ten minutes for the servants to bring the guest to my room. He’d been tightly bound with sturdy ropes and roughly wiped clean, revealing a face that I could only describe as “stupidly handsome.” They’d left on his long golden earrings, forming a striking contrast with his sharp eyes and soft jaw. A blue dragon pendant had been hung around his neck for reasons I could only begin to guess.  
+It took less than ten minutes for the servants to bring the guest to my room. He’d been tightly bound with sturdy ropes and roughly wiped clean, revealing a face that I could only describe as “stupidly handsome.” His face was made gentle by a soft jaw, flat cheekbones, and epicanthal folds, which only made his sharp eyes and dangling earrings stand out in sharp and geometric contrast. He would’ve been a real hit in my hometown. A blue dragon pendant had been hung around his neck for reasons I could only begin to guess.  
 
 The slowly spreading bloodstains on his clothes suggested that he hadn’t been treated as miraculously as I’d hoped. His breathing was ragged and his skin pallid. If I wanted to get information from him, I probably didn’t have much time. His head lolled as the servants brusquely stuffed him into the chair across the tea table from me. 
 
