--- a/src/collections/proof-of-existence/4.md
+++ b/src/collections/proof-of-existence/4.md
@@ -2,10 +2,10 @@
 title: "Unexpected Guest (4)"
 arc: 1
 chapter: 4
-tags: ["cynara", "luka"]
+tags: ["cynara", "luka", "moon path realm"]
 lastEdit: 2025-04-05
 pubDate: 2025-04-05
-authorsNotes: <p>Thank you everyone for the warm reception to the first three chapters! I was excited by how many insightful observations there were in the comments, and am excited to unveil more.</p> <p>If some of the worldbuilding feels confusing, it should become clearer in future chapters.</p> <p>I've added an RSS feed for this project for those of you who are interested. You can find it using an automatic feed reader on <code>/proof-of-existence</code> pages or by going to the index.</p>
+authorsNotes: <p>Thank you everyone for the warm reception to the first three chapters! I was excited by how many insightful observations there were in the comments, and am looking forward to unveiling more about the story. If some of the worldbuilding feels confusing, it should become clearer as the story progresses.</p> <p><strong>Minor edits in previous chapters</strong>&#58; removed "duration" specification from the description for <code>[Caller]</code> (this was a mistake that didn't get caught while editing); described our favorite guest's face with a little more detail; some wording clarifications.</p> <p>I've also created an RSS feed for this project! You can find it using an automatic feed reader on <code>/proof-of-existence/</code> pages or by going to the index.</p>
 ---
 I don’t know how long I was in the darkness. I existed without sensation. I saw nothing and heard nothing, not even my own breath; my voice escaped only in silence. I tried to move my limbs, but there was no contact or resistance to tell me about my surroundings. The lack of feedback was so complete, if I stretched my limbs out, I would wonder if I’d actually moved myself at all. 
 
@@ -73,7 +73,7 @@ She must have listened to me, because the voices changed again.
 
 “Acacius,” Cynara repeated. Her voice was trembling now, too. “Something is touching me.” 
 
-“Just hold still and wait. Don’t provoke them.”
+“Just hold still and wait. *Don’t* provoke them.”
 
 Her hand squeezed mine more tightly, if such a thing was possible. 
 
@@ -87,7 +87,7 @@ At last, the crawling sensation of being watched disappeared.
 
 I let out a breath I didn’t know I’d been holding. 
 
-“They’re gone,” I said. And then I added, in case it wasn’t obvious, *“Don’t* open your eyes. I don’t want them coming back.” 
+“They’re gone,” I said. And then I added, in case it wasn’t obvious, “Don’t open your eyes. I don’t want them coming back.” 
 
 “What was that?” 
 
@@ -143,7 +143,7 @@ I turned Cynara’s pocket lining inside out as I withdrew my hand, imitating th
 
 “What? No, I definitely wouldn’t have put something like that in my pocket…” 
 
-“Really.” I pretended to bring my free hand up to my head moved it around a bit so she could hear and feel my movement. “Then what am I wearing now?” 
+“Really.” I pretended to bring my free hand up to my head and shifted it around a bit so she could hear my clothes rustling and feel my movement. “Then what am I wearing now?” 
 
 Cynara nearly poked my eyes as she felt around my face. “How the hell… What are you pulling now?” 
 
@@ -359,7 +359,7 @@ Wouldn’t she do that anyway?
 
 Ah, focus, Eunseok. Cynara panicked too easily in strange circumstances. I had to tell her everything she needed before it was too late. 
 
-I’d already tested to make sure [Honest Man’s Deception] wouldn’t wear off while I was asleep, so the blindfold should last even if I lost consciousness. But what if I died? 
+I’d already tested to make sure `[Honest Man’s Deception]` wouldn’t wear off while I was asleep, so the blindfold should last even if I lost consciousness. But what if I died? 
 
 “Be prepared for the artifact to fail you,” I said. “The entities in the dark hate to be perceived. You should be able to increase your chances of survival as long as you keep your eyes closed.” 
 
@@ -381,7 +381,7 @@ The howling that only I could hear pierced my mind, and for the first time, I cl
 
 ***— Help me.***
 
-Who are you? I wanted to ask. Why are you so loud? Can’t you see I’m busy? 
+*Who are you?* I wanted to ask. *Why are you so loud? Can’t you see I’m busy?* 
 
 A force latched onto my soul like a drowning man and pulled. 
 
