fix formatting errors

--- a/src/collections/proof-of-existence/2.md
+++ b/src/collections/proof-of-existence/2.md
@@ -3,7 +3,7 @@ title: "Unexpected Guest (2)"
 arc: 1
 chapter: 2
 tags: ["cynara", "graves", "zaire", "cyprian", "luka", "moon path realm"]
-lastEdit: 2025-04-04
+lastEdit: 2025-04-13
 pubDate: 2025-03-28
 ---
 After reading through the entire Record of Existence, I took a moment to gather my thoughts. 
@@ -244,7 +244,7 @@ I couldn't find a book that dumbed it down enough for me to understand how that 
 
 I also started going through Acacius’ notes on the Devouring Exchange, which was slow and speculative work.
 
-Interestingly enough, the Duvals as a whole seemed ignorant of the fact that the Devouring Exchange granted new powers by killing and absorbing an entity that matched their specifications. To them, the fight was just an illustory trial conjured by the ritual. 
+Interestingly enough, the Duvals as a whole seemed ignorant of the fact that the Devouring Exchange granted new powers by killing and absorbing an entity that matched their specifications. To them, the fight was just an illusory trial conjured by the ritual. 
 
 Perhaps they’d been blinded by the words of the spirit they’d allegedly won the trial from, who’d described the process as such: “Nothing can be gained without paying a price. Prove yourself better than what you aspire to be.” 
 
