--- a/src/collections/proof-of-existence/5.md
+++ b/src/collections/proof-of-existence/5.md
@@ -3,7 +3,7 @@ title: "Unexpected Guest (5)"
 arc: 1
 chapter: 5
 tags: ["cynara", "luka", "cyprian", "moon path realm"]
-lastEdit: 2025-04-12
+lastEdit: 2025-04-13
 pubDate: 2025-04-12
 authorsNotes: <p>A new entry has been added to this story's supplemental materials. You can view it on the index page.</p>
 ---
@@ -353,7 +353,7 @@ More importantly.
 
 `[Spirits like me?]` I probed. 
 
-[Are you new to Kosmonymia?] 
+`[Are you new to Kosmonymia?]`
 
 Seeing how casually he asked, it didn’t seem like a big deal, so I answered straightforwardly, `[Yes.]`
 
