ch6 minor edit + ch7 update

--- a/src/collections/proof-of-existence/6.md
+++ b/src/collections/proof-of-existence/6.md
@@ -3,7 +3,7 @@ title: "Unexpected Guest (6)"
 arc: 1
 chapter: 6
 tags: ["cynara", "cyprian", "luka"]
-lastEdit: 2025-04-19
+lastEdit: 2025-04-25
 pubDate: 2025-04-19
 authorsNotes: <p>If this webnovel was written in Chinese, the nickname Luka suggested for our protagonist would have been something like 小黑 (lit. little black), which is kind of like calling a dog "Spot." Similarly casual nicknames exist in KR and JP. Sadly, they don't localize well to English.</p> <p>We are almost at the conclusion of the introductory arc. :)</p>
 ---
@@ -214,7 +214,7 @@ They couldn’t possibly be all as awkward to share as mine.
 
 In response to my question, Luka gave me a level look.
 
-“A title is what you do. A World Proof is who you are. You are known by your titles, but you are understood by your World Proof,” he said softly. “To share it is to bare yourself completely. And there are few who would want to be seen through by a stranger.”
+“You are known by your titles, but you are understood by your World Proof,” he said softly. “To share it is to bare yourself completely. And there are few who would want to be seen through by a stranger.”
 
 His piercing red eyes glowed in the firelight. Shadows moved across his face. 
 
