--- a/src/collections/proof-of-existence/7.md
+++ b/src/collections/proof-of-existence/7.md
@@ -3,7 +3,7 @@ title: "Unexpected Guest (7)"
 arc: 1
 chapter: 7
 tags: ["cynara", "cyprian", "graves"]
-lastEdit: 2025-04-26
+lastEdit: 2025-04-27
 pubDate: 2025-04-26
 authorsNotes: <p>Due to its shorter-than-usual length, the next chapter will go up on Wednesday before I resume my regular Saturday posting schedule.</p>
 ---
@@ -283,9 +283,9 @@ Such a lush and verdant country. Really… it was enough to make me jealous.
 
 The scenery outside began to blur, faster and faster, flashes of green and blue as if we were moving at great speeds. Inside the carriage, though, we felt no change, only the same sedate pace we’d been traveling at before. It was like the world was moving past us instead of the other way around.
 
-Around half an hour later, the scenery outside slowed down. The blurred colors coalesced into a broad river, glittering under the midday sun. Willows and riverside grasses dipped their green fingers into the water, waving at the boats that sailed along the blue passage without smoke or sound. 
+Around half an hour later, the scenery outside slowed down. The blurred colors coalesced into a broad river that glittered under the midday sun. Willows and riverside grasses dipped their green fingers into the water, waving at the boats that sailed by without smoke or sound. 
 
-Our carriage shifted into place on a smooth black road that traveled parallel to the river. The traffic was divided into two directions, and in each direction, two lanes. Vehicles of various styles and materials traveled on the road: some carriages, some cars, some hovering ships. What they had in common was their overall size, height, speed, and ability to signal to others. I guess even for all of Kosmonymia’s mixed systems, it still had road safety standars.
+Our carriage shifted into place on a smooth black road that traveled parallel to the river. The traffic was divided into two directions, and in each direction, two lanes. Vehicles of various styles and materials traveled on the road: some carriages, some cars, some hovering vehicles. What they had in common was their overall size, height, speed, and ability to signal to others. I guess even for all of Kosmonymia’s mixed systems, it still had road safety standards.
 
 The road took us into a city of slate blue stone, dark lacquered roof tiles, and iron decorations. Most vehicles were diverted to transit centers at the outskirts, from which sleek and glowing trolleys departed at regular intervals. Only a single lane was reserved for personal vehicles like ours, now; the outer lanes were reserved for these public transit vehicles, and the majority of road space was taken up by wide sidewalks and cultivated lanes of greenery. The city was bustling with pedestrians. Towers and building faces showcased elegant patterns formed by mosaics of different colored stones; carved draconic decorations perched atop the swooping angles of the roofs. 
 
