--- a/src/collections/proof-of-existence/7.md
+++ b/src/collections/proof-of-existence/7.md
@@ -283,7 +283,7 @@ Such a lush and verdant country. Really… it was enough to make me jealous.
 
 The scenery outside began to blur, faster and faster, flashes of green and blue as if we were moving at great speeds. Inside the carriage, though, we felt no change, only the same sedate pace we’d been traveling at before. It was like the world was moving past us instead of the other way around.
 
-Around half an hour later, the scenery outside slowed down. The blurred colors coalesced into a broad river that glittered under the midday sun. Willows and riverside grasses dipped their green fingers into the water, waving at the boats that sailed by without smoke or sound. 
+Around half an hour later, the scenery outside slowed down. The blurred colors coalesced into a broad river that glittered under the midday sun. Willows and riverside grasses dipped their green fingers into the water, waving at the occasional boats that sailed by without smoke or sound. 
 
 Our carriage shifted into place on a smooth black road that traveled parallel to the river. The traffic was divided into two directions, and in each direction, two lanes. Vehicles of various styles and materials traveled on the road: some carriages, some cars, some hovering vehicles. What they had in common was their overall size, height, speed, and ability to signal to others. I guess even for all of Kosmonymia’s mixed systems, it still had road safety standards.
 
