adjust narrative voice

--- a/src/collections/proof-of-existence/7.md
+++ b/src/collections/proof-of-existence/7.md
@@ -283,11 +283,17 @@ Such a lush and verdant country. Really… it was enough to make me jealous.
 
 The scenery outside began to blur, faster and faster, flashes of green and blue as if we were moving at great speeds. Inside the carriage, though, we felt no change, only the same sedate pace we’d been traveling at before. It was like the world was moving past us instead of the other way around.
 
-Around half an hour later, the scenery outside slowed down. The blurred colors coalesced into a broad river that glittered under the midday sun. Willows and riverside grasses dipped their green fingers into the water, waving at the occasional boats that sailed by without smoke or sound. 
+I feigned an expression of indifference so that it seemed like I was both ignoring Cynara and unimpressed by the scenery. But the truth was, I’d never seen anything like this before. Even though I couldn’t make much sense of the shifting world outside, I could barely tear my eyes away. 
+
+About half an hour later, the carriage slowed down. The blurred colors coalesced into a broad river that glittered under the midday sun. Willows and riverside grasses dipped their green fingers into the water, waving at the occasional boats that sailed by without smoke or sound. 
+
+I liked that our destination was near a river. Bodies of water were good. 
 
 Our carriage shifted into place on a smooth black road that traveled parallel to the river. The traffic was divided into two directions, and in each direction, two lanes. Vehicles of various styles and materials traveled on the road: some carriages, some cars, some hovering vehicles. What they had in common was their overall size, height, speed, and ability to signal to others. I guess even for all of Kosmonymia’s mixed systems, it still had road safety standards.
 
 The road took us into a city of slate blue stone, dark lacquered roof tiles, and iron decorations. Most vehicles were diverted to transit centers at the outskirts, from which sleek and glowing trolleys departed at regular intervals. Only a single lane was reserved for personal vehicles like ours, now; the outer lanes were reserved for these public transit vehicles, and the majority of road space was taken up by wide sidewalks and cultivated lanes of greenery. The city was bustling with pedestrians. Towers and building faces showcased elegant patterns formed by mosaics of different colored stones; carved draconic decorations perched atop the swooping angles of the roofs. 
+
+It really did feel like something straight out of fantasy. I just hoped it wasn’t secretly hiding some terrible evil. That would be just awful. 
 
 Our carriage made its way through the city to a teal, wrought iron arch that stood at the entrance of a long, tree-lined pathway. Beyond the trees, I could see the tops of distant buildings, and a small floating citadel anchored above them by a silver chain. 
 
