--- a/src/collections/proof-of-existence/8.md
+++ b/src/collections/proof-of-existence/8.md
@@ -17,7 +17,7 @@ That wasn’t what he’d been thinking when he went back into the moon paths.
 
 Resurrection tended to affect his mind for a while. His logic and higher reasoning would fade to the background, slow to rouse from sleep. In their place, the last desires and regrets he had before dying would be amplified, until they seemed like the only thing worth thinking about, or acting on at all. 
 
-So when he woke up again in Acacius’ room, he hadn’t wondered what Acacius’ intentions were or why his body was still intact. He’d just gotten up and thought, I have to find Dreyminn, and he’d gone to do just that. 
+So when he woke up again in Acacius’ room, he hadn’t wondered what Acacius’ intentions were or why his body was still intact. He’d just gotten up and thought, *I have to find Dreyminn,* and gone to do just that. 
 
 Which hadn’t gone well, though no one would know that just by looking at him. All his wounds from that time had long healed. Now, his only wounds were the calluses on his hands from swinging his sword in his teacher’s backyard all day. 
 
