--- a/src/collections/proof-of-existence/8.md
+++ b/src/collections/proof-of-existence/8.md
@@ -195,7 +195,7 @@ If she was back to joking, then things were okay. Luka should play along. He gri
 
 “Exactly. Then I wouldn’t have to worry about you anymore.” She pointed at her head. “You see my hair, Luka? It’s going white because of you.” 
 
-Luka made a flat expression, the way that lifted her mood when she made a joke, and Sacha laughed. 
+Luka made a flat expression, the way he knew would lift her mood, and Sacha laughed. 
 
 Thus, despite everything — his recent mistakes, Sacha’s troubles, and the stirring undercurrents of Iyiria — it was another peaceful day in Sacha’s household. 
 
