add authors note bait

--- a/src/collections/proof-of-existence/8.md
+++ b/src/collections/proof-of-existence/8.md
@@ -5,6 +5,7 @@ chapter: 8
 tags: ["luka", "sacha"]
 lastEdit: 2025-04-30
 pubDate: 2025-04-30
+authorsNote: <p>What do you think of Luka? Is your impression of him now different from when he was first introduced?</p> <p>I like writing from his point of view a lot, so I hope to see more of him soon.</p>
 ---
 
 Luka didn’t consider himself a hot-headed person, generally. 
