--- a/src/collections/proof-of-existence/9.md
+++ b/src/collections/proof-of-existence/9.md
@@ -56,7 +56,7 @@ I dropped my luggage off at my assigned dorm room, located in a cluster of resid
 
 After putting away the clothes, supplies, books, journals, and miscellaneous tools I’d brought from Acacius’ room, it was time to go walk around the city and collect information. I needed to develop a common sense about this world as soon as I could. 
 
-I felt like Acacius’ appearance and high-quality clothes would make him stand out too much in a crowd, and it would be weird for him to go around asking things like what the local currency was, so I wanted to take someone else’s appearance. The Duvals obviously weren’t suitable for similar reasons. Luka was an option, but there was a small chance I’d run into my fellow classmate out there, and also, I’d only ever seen him in bloody torn-up clothes. That appearance was not good for laying low.
+It would be weird for Acacius to go around asking things like what the local currency was, and his fancy noble clothes might be a bit too memorable, so I wanted to take someone else’s appearance. The Duvals obviously weren’t suitable for similar reasons. Luka was an option, but there was a small chance I’d run into my fellow classmate out there, and also, I’d only ever seen him in bloody torn-up clothes. That appearance was not good for laying low.
 
 And I didn’t want to show anyone what I, or my family, looked like. 
 
