ch10 update, ch9 edit

--- a/src/collections/proof-of-existence/9.md
+++ b/src/collections/proof-of-existence/9.md
@@ -3,7 +3,7 @@ title: "Mundane Troubles (1)"
 arc: 2
 chapter: 9
 tags: ["cynara", "isul"]
-lastEdit: 2025-05-03
+lastEdit: 2025-05-10
 pubDate: 2025-05-03
 authorsNotes: <p>What do you think of Isul? I like the way he plays off Acacius and I also just enjoy having a weird guy around. It's great for drawing out all kinds of charged statements from our protagonist in his internal monologue.</p>
 ---
@@ -60,7 +60,7 @@ It would be weird for Acacius to go around asking things like what the local cur
 
 And I didn’t want to show anyone what I, or my family, looked like. 
 
-Which left one other person. 
+Which left one other person I was willing to imitate. 
 
 Chen Xiarui had always considered me a brother. He wouldn’t mind me borrowing his face for a while, would he? 
 
