--- a/src/collections/proof-of-existence/11.md
+++ b/src/collections/proof-of-existence/11.md
@@ -104,7 +104,7 @@ Next, I reviewed the basics of 6E spellcasting. In the end, it boiled down to po
 
 Meditation exercises nurtured ether in the body, and ether circulation exercises built up mage circles in the heart. A mage’s power was exponentially amplified for every completed circle. A single-circle mage was only a beginner; someone who had seven circles qualified as an archmage. Acacius had four circles, which was fairly impressive for his age. I didn’t need to worry about building up power for now. 
 
-Control referred to one’s ability to manipulate ether flow within the body and outside of it. This came from natural talent and practice. Formal, distinct spells didn’t actually exist in the 6E frame. Instead, certain classic “spells” served as benchmarks of a mage’s power and control. Incidentally, the process of “typing” ether into a distinct element was a form of control. Theoretically, you could learn to wield all six elements, but it was difficult to use elements other than your greatest affinities. 
+Control referred to one’s ability to manipulate ether flow within the body and outside of it. This came from natural talent and practice. Formal, distinct spells didn’t actually exist in the 6E frame. Instead, certain classic “spells” served as benchmarks of a mage’s power and control. Incidentally, the process of “typing” ether into a distinct element was a form of control. Theoretically, you could learn to wield all six elements, but it was difficult to use elements outside your greatest affinities, and affinities were shaped by how well you aligned with an element’s symbolic domain. 
 
 Elemental affinities were shaped by how well you aligned with an element’s symbolic domain. 
 
