--- a/src/collections/proof-of-existence/13.md
+++ b/src/collections/proof-of-existence/13.md
@@ -3,7 +3,7 @@ title: "Mundane Troubles (5)"
 arc: 2
 chapter: 13
 tags: ["jules", "luka", "thais", "etienne", "zaire", "cynara", "isul"]
-lastEdit: 2025-05-31
+lastEdit: 2025-06-07
 pubDate: 2025-05-31
 authorsNotes: <p>The character appendix has been updated.</p>
 ---
@@ -373,7 +373,7 @@ Etienne smiled. “Sure. What’s the gig, pal?”
 
 “Yeah, some idiot had the idea of enrolling me in the Governance track,” Etienne said with a grin. “What about you?” 
 
-“I’m sort of just here by chance,” I replied vaguely. Should I ask for help for him…? Well, Etienne wasn’t in Acacius’ class, so as long as I kept on being an antisocial bastard at school, I probably wouldn’t run into any problems. “Sorry about all the homework. You got a couple hours a night? Pay is not a problem.”  
+“I’m sort of just here by chance,” I replied vaguely. Should I ask for help from him…? Well, Etienne wasn’t in Acacius’ class, so as long as I kept on being an antisocial bastard at school, I probably wouldn’t run into any problems. “Sorry about all the homework. You got a couple hours a night? Pay is not a problem.”  
 
 “Oh, yeah?” Etienne cast a look at Chen Xiarui’s worn out clothes. “How much you got?”  
 
