ch15 clarifications and adjustments

--- a/src/collections/proof-of-existence/15.md
+++ b/src/collections/proof-of-existence/15.md
@@ -278,17 +278,23 @@ He fell.
 
 “Do you actually respect that rule?”
 
-He knew those voices. His body didn’t feel hot anymore. Linden struggled to open his eyes.
+He knew those voices. His body didn’t feel hot anymore. 
+
+Judging from the situation… He’d lost. 
+
+So why was he still alive? 
+
+Linden struggled to open his eyes.
 
 “Linden,” Master Dalileh’s voice whispered in his ear. “I’m watching a very interesting show right now. Don’t move, or I’ll have to knock you out again.”
 
-What?
+What was going on?
 
 But Linden trusted Dalileh, and he was still alive. He laid still on the ground with his eyes closed, struggling to focus and hanging onto his consciousness by a thread.
 
 “There are no witnesses besides us,” said Acacius, a faint thread of annoyance in his usually indifferent tone. “What more do you need to act?”
 
-There was a smile in Dalileh’s voice. “A secret’s no secret as long as there are two who know.”
+There was a smile in Dalileh’s voice. “A secret’s no secret as long as there are two who know. Besides, this is hardly a convincing state of affairs, is it?”
 
 “So, what? I have to do this the above-board way now?”
 
@@ -333,8 +339,6 @@ Despite everything, Linden’s stomach dropped.
 “Help. Master Dalileh,” Acacius called, voice strained. He coughed wetly and gasped for breath. “I… don’t want to die…”
 
 …
-
- 
 
 If Linden didn’t want to kill him before, he definitely would now.
 
