ch14 establish water healing

--- a/src/collections/proof-of-existence/14.md
+++ b/src/collections/proof-of-existence/14.md
@@ -140,7 +140,7 @@ Dalileh laughed.
 
 With that, I secured Dalileh’s cooperation, which was great, because that increased the chances of Linden and I both surviving in case of any unhappy accidents. 
 
-My routine didn’t change too much with my potentially deadly duel impending. I diligently attended school, took notes in class, and did my best to avoid talking to people who were acquainted with Acacius. It was just that after school, instead of catching up on academics, I’d head off campus to practice with Etienne instead, and if we got beat up too much, he’d get his friend Thais to heal us with her magic. I was learning that “light injuries” was a much broader term in this world than in mine. 
+My routine didn’t change too much with my potentially deadly duel impending. I diligently attended school, took notes in class, and did my best to avoid talking to people who were acquainted with Acacius. It was just that after school, instead of catching up on academics, I’d head off campus to practice with Etienne instead, and if we got beat up too much, he’d get his friend Thais to heal us with her 6E water magic. I was learning that “light injuries” was a much broader term in this world than in mine. 
 
 If someone was injured, it was usually me. Aura users were really resilient. 
 
