ch15 edits ch16 update

--- a/src/collections/proof-of-existence/15.md
+++ b/src/collections/proof-of-existence/15.md
@@ -3,7 +3,7 @@ title: "Disinheritor's Record (1)"
 arc: 2
 chapter: 15
 tags: ["linden", "dalileh"]
-lastEdit: 2025-06-14
+lastEdit: 2025-06-21
 pubDate: 2025-06-14
 authorsNotes: <p>Apologies for the delay with this chapter, I ended up rewriting parts that I wanted to be stronger. I've done my best to make things clear, but if you have any questions, I'll answer them in the comments -- provided they won't be answered in the upcoming chapters.</p> <p>I like Linden a lot, all his strong emotions, the way he projects onto Acacius, and the mistakes he keeps making. I also like having Dalileh, who is entertained by children inflicting violence on each other and on themselves. And I do love how our protagonist has more similarities with the original Acacius than he might like to think. Did you have a favorite characterization moment from this chapter?</p> <p>Once again, thank you for reading, and I hope to see you next week!</p>
 ---
@@ -280,15 +280,13 @@ He fell.
 
 He knew those voices. His body didn’t feel hot anymore. 
 
-Judging from the situation… He’d lost. 
-
-So why was he still alive? 
+Why was he still alive? 
 
 Linden struggled to open his eyes.
 
 “Linden,” Master Dalileh’s voice whispered in his ear. “I’m watching a very interesting show right now. Don’t move, or I’ll have to knock you out again.”
 
-What was going on?
+What?
 
 But Linden trusted Dalileh, and he was still alive. He laid still on the ground with his eyes closed, struggling to focus and hanging onto his consciousness by a thread.
 
