acacius residual feelings

--- a/src/collections/proof-of-existence/2.md
+++ b/src/collections/proof-of-existence/2.md
@@ -3,7 +3,7 @@ title: "Unexpected Guest (2)"
 arc: 1
 chapter: 2
 tags: ["cynara", "graves", "zaire", "cyprian", "luka", "moon path realm"]
-lastEdit: 2025-04-13
+lastEdit: 2025-06-27
 pubDate: 2025-03-28
 ---
 After reading through the entire Record of Existence, I took a moment to gather my thoughts. 
@@ -132,7 +132,7 @@ We stepped into a giant foyer with a glittering chandelier, marble tiles, and po
 
 I didn’t have much time to examine what they were depicting before I sensed movement at the top of the spiraling stairs. I looked up and met eyes with a teenage girl in a refined dress. Her pink hair was pulled back into a thick pair of braided pigtails. Her sharp golden eyes glared out from underneath her bangs.
 
-An uncomfortable mix of inferiority, guilt, and pity rose up in me. 
+An uncomfortable mix of inferiority, guilt, and hatred rose up in me. 
 
 “Cynara,” my mouth said. 
 
