--- a/src/collections/proof-of-existence/16.md
+++ b/src/collections/proof-of-existence/16.md
@@ -489,7 +489,7 @@ But.
 
 Linden grit his teeth and forced the words out. 
 
-“Its name is [Regretful Devourer of What He Loves].”
+“Its name is `[Regretful Devourer of What He Loves]`.”
 
 “Well now,” said Acacius. “Why would you do that?” 
 
