--- a/src/collections/proof-of-existence/18.md
+++ b/src/collections/proof-of-existence/18.md
@@ -3,7 +3,7 @@ title: "Field Exercise (2)"
 arc: 3
 chapter: 18
 tags: ["veric", "professor raoul", "hanan"]
-lastEdit: 2025-07-05
+lastEdit: 2025-07-06
 pubDate: 2025-07-05
 authorsNotes: <p>Lots of information/setup in this chapter. Tl;dr Fulsgate is a disputed area between two nations, and Fantasm Worlds are this story's take on the "scenario/dungeon" trope. As usual, if you have any questions, I'll do my best to clarify anything that wasn't left for later or was a deliberate mystery.</p> <p>Thank you as always for reading, and see you next week.</p>
 ---
@@ -172,7 +172,7 @@ According to the reading I’d done, the city-district of Fulsgate had a bit of 
 
 Because of its disputed territorial status, Fulsgate had been diplomatically named a “special autonomous zone” that mostly governed itself. It was effectively run by the Broken Kaleidoscope, which was an international research organization that dealt with “systematic frame technology,” but I didn’t really understand what that meant. 
 
-Apparently, the Fantasm World we were visiting was just one of many that the Broken Kaleidoscope researched, but it was part of the “kaleidoscope perpective” frame system that the Broken Kaleidoscope had named itself after. 
+Apparently, the Fantasm World we were visiting was just one of many that the Broken Kaleidoscope researched, but it was part of the “kaleidoscope perspective” frame system that the Broken Kaleidoscope had named itself after. 
 
 In any case, I was happy to wander around the merchant district for a while, browsing the open-air market’s local produce and looking through the stylishly arranged windows of specialty stores. I saw a lot of art, hand-painted handicrafts, and stained glass pieces. Many signs were written in both Iyirian and a foreign language that shared part of the Iyirian alphabet, which I assumed was Lemirian. 
 
@@ -220,7 +220,7 @@ A golden phantom of a snake encircled the rift, biting the end of its tail. A me
 
 That felt ominous. Forget my grades; should I just leave? 
 
-If I wanted to stay in this world, though, I needed to learn about Fantasm Worlds eventually. Maybe it be better to do it under controlled circumstances when there was emergency infrastructure in place.
+If I wanted to stay in this world, though, I needed to learn about Fantasm Worlds eventually. Maybe it would be better to do it under controlled circumstances when there was emergency infrastructure in place.
 
 As everyone lined up to enter the Fantasm World, Verica approached me with a grave expression on her face. 
 
