--- a/src/collections/proof-of-existence/19.md
+++ b/src/collections/proof-of-existence/19.md
@@ -1,7 +1,7 @@
 ---
 title: "Field Exercise (3)"
 arc: 3
-chapter: 18
+chapter: 19
 tags: ["ozias", "veric", "roxana"]
 lastEdit: 2025-07-12
 pubDate: 2025-07-12
@@ -78,9 +78,7 @@ Huh. Did this have to do with the blacked out pages in my Record? How did Acaciu
 
 I guess I had more to research when I got back to school. 
 
-In the time it took for my Record to be recited, I got a better grasp of my surroundings. I’d emerged from my cocoon off the stem of a tall, flowering plant. This plant stem was right next to some kind of rocky cliff face covered in moss, which made it easy to climb. 
-
-I’d climbed far enough along the wall that I was confident there was enough room for a human body. I crawled back down to the base of the rocky wall and tried calling on `[Honest Man’s Deception]`. 
+In the time it took for my Record to be recited, I got a better grasp of my surroundings. I’d emerged from my cocoon off the stem of a tall, flowering plant. This plant stem was right next to some kind of rocky cliff face covered in moss, which made it easy to climb. By now, I’d climbed far enough along the wall that I was confident there was enough room for a human body, so I crawled back down to the base of the rocky wall and tried calling on `[Honest Man’s Deception]`. 
 
 A moment later, I was sitting there in Acacius’ body, no worse for wear except for a numb patch between my shoulder blades that wouldn’t go away. I was wearing the same clothes and necklace of artifacts that I’d had when entering the Fantasm World, and I even had the light satchel I’d packed all my survival supplies in. 
 
