edit for clarity

--- a/src/collections/proof-of-existence/20.md
+++ b/src/collections/proof-of-existence/20.md
@@ -3,7 +3,7 @@ title: "Field Exercise (4)"
 arc: 3
 chapter: 20
 tags: ["veric", "roxana"]
-lastEdit: 2025-07-19
+lastEdit: 2025-07-20
 pubDate: 2025-07-19
 authorsNotes: <p>We've finally hit the action! I'm very excited for the rest of this arc.</p> <p>One thing I really liked about writing this chapter is that you can feel the shape of the life our protagonist must have lived, especially based on his response to danger. It's fun to think about the person he is because of and in spite of the world he was in. What do you think?</p> <p>This chapter went through some serious reconstruction under the editor's axe, so if you see any dangling sentences or mistakes, feel free to let me know</p>
 ---
@@ -117,13 +117,13 @@ The sun was warm and comfortable, and the ambience of wind and distant conversat
 
 I saw the city spread beneath me like a quilt, before I dove down towards a bird feeder full of seeds that someone had hung up in their yard. A pair of claws stretched out to snatch the startled sparrows scattering away.
 
-I saw a pair of paws diligently digging up plant roots from the dirt. My vision shook as a great shadow fell over me. Green leaves streaked past me as I dove into the underbrush.
+I saw furry paws diligently digging up plant roots from the dirt. My vision shook as a great shadow fell over me. Green leaves streaked past me as I dove into the underbrush.
 
 I saw hands cooking food, taking care of the garden, counting out coins and handing out change at the counter. There were faces of every age and gender, speaking to me, looking back at me, passing me by. Occasionally, my classmates and teachers surfaced in the sea of images, only to be submerged again in the flow. 
 
 Then I saw a butterfly-robed man standing in a familiar street. My vision tilted to follow his gaze up to the eaves of a nearby building, where a large butterfly’s slowly fanning wings shimmered in iridescent shades of blue.
 
-“Is that an Kalos butterfly? Aren’t they supposed to be underground?” I heard a deep voice say.
+“Is that a Kalos butterfly? Aren’t they supposed to be underground?” I heard a deep voice say.
 
 “It might’ve been flushed out by the students’ activity,” a woman replied. 
 
@@ -357,11 +357,11 @@ That was wrong.
 
 It was precisely because they were my trustworthy friends that they could betray me. 
 
-Even now… They’d tried to disarm me, and I didn’t know what they would try next once I fell asleep. Could I walk away before they went any further? … But if they’d already targeted me once, would they really be willing to let me walk away? 
+Just like what happened to Brother, and Sister, and Teacher. 
 
-They were my trustworthy friends, but they wouldn’t be for much longer, would they? 
+I didn't know what had motivated these friends to move against me, but even now, they’d tried to disarm me and drug me, and I didn’t know what they would try next once I fell asleep. Could I walk away before they went any further? … But if they’d already gone this far, would they really be willing to let me walk away? 
 
-Just like what happened to Sister, and Brother, and Teacher. 
+They were my trustworthy friends, but they wouldn’t be for much longer, would they?
 
 I felt sad. I hadn’t wanted to lose any more friends like this. Maybe they should all just go to hell. 
 
